--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
 
+    //ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
