--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +23,8 @@
         <activity android:name=".DevicesListActivity" />
         <activity android:name=".SectionActivity" />
         <activity android:name=".RoomActivity" />
-        <activity android:name=".DeviceDetailsActivity" />
+        <activity android:name=".DeviceDetailsActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity android:name=".InfoActivity"></activity>
     </application>
 
