--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+
+       
+        <activity android:name=".FibaroMainActivity"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,12 +22,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DevicesListActivity" />
-        <activity android:name=".SectionActivity" />
-        <activity android:name=".RoomActivity" />
-        <activity android:name=".DeviceDetailsActivity"
-            android:windowSoftInputMode="stateAlwaysHidden"/>
-        <activity android:name=".InfoActivity"></activity>
     </application>
 
 </manifest>
